# Machine

./: CMakeLists.txt
example/: main.cpp
src/instruction/: Instruction.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h
src/isa/: all.h  arithmetic.cpp  arithmetic.h  isa_all.h  jump.cpp  jump.h  logic.cpp  logic.h  memory.cpp  memory.h
src/machine/: Data.h  Machine.cpp  Machine.h
src/program/: Program.h
